# AVL-Tree

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  results.csv
scripts/: plot_latency.py  profile_xctrace.sh  run_bench.sh
src/: main.cpp
src/bench/: bench_main.cpp
src/dict/: AVLTreeDictionary.cpp  AVLTreeDictionary.hpp  DictionaryConfig.hpp  IDictionary.hpp
test/: test_smoke.cpp
